# xcubebase

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kp/xt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/assets/xcube/: xcube.yaml
app/src/main/assets/xcube/arm64-v8a/: shellcmd
app/src/main/assets/xcube/armeabi-v7a/: shellcmd
app/src/main/cpp/: CMakeLists.txt  HelloFrida.cpp  HelloFrida.h  NativeEntry.cpp  NativeEntry.h  frida-gumjs.cpp  frida-gumjs.h  shellcmd.cpp
app/src/main/cpp/includes/arm64-v8a/: frida-gumjs.h
app/src/main/cpp/includes/armeabi-v7a/: frida-gum.h  frida-gumjs.h
app/src/main/java/org/xtgo/xcube/base/: AntiAntiDebug.java  Example.java  FileUtils.java  MainActivity.java  ShellUtils.java  XcubeBase.java  XcubeConfig.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kp/xt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
